Fix text line spacing issue on iPad vertical version

--- a/css/style.css
+++ b/css/style.css
@@ -305,7 +305,6 @@ md-list md-list-item.selected button.md-button:not([disabled]):hover {
     -o-transition: -o-transform ease 0.8s;
     transition: transform ease 0.8s, -ms-transform ease 0.8s;
     box-shadow: 0px 4px 5px -2px rgba(0, 0, 0, 0.2), 0px 7px 10px 1px rgba(0, 0, 0, 0.14), 0px 2px 16px 1px rgba(0, 0, 0, 0.12);
-    
     /* initially put them out of the screen to avoid ugly initial animation */
     -webkit-transform: translate3d(3000px, 0, 0);
     -moz-transform: translate3d(3000px, 0, 0);
@@ -549,6 +548,13 @@ md-list md-list-item.selected button.md-button:not([disabled]):hover {
     }
 }
 
+@media (min-width: 701px) {
+    #results .baseline-total-footprint-amount {
+        line-height: 10px;
+        margin-bottom: 15px;
+    }
+}
+
 #results .baseline-wrapper .card.result {
     text-transform: uppercase;
     font-weight: 800;
@@ -671,7 +677,8 @@ md-list md-list-item.selected button.md-button:not([disabled]):hover {
     text-shadow: 0.5px 0.5px 2px #000000;
 }
 
-#fbShareBtn, #pledgeBtn {
+#fbShareBtn,
+#pledgeBtn {
     float: right;
     margin-right: 4px;
     margin-left: 4px;
